add automated actions
