# handler/handler.go
@@ -15,10 +15,25 @@ func NewHandler(mu *usecase.MachineUsecase) *gin.Engine {
 	r := gin.Default()
 	v1 := r.Group("/v1")
 	{
-		v1.GET("/machines/status/:machineName", GetMachineStatus)
-		v1.POST("/machines/start/:machineName", StartMachine)
-		v1.POST("/machines/stop/:machineName", StopMachine)
-		v1.GET("/tasks/:taskID", GetTaskStatus)
+		machines := v1.Group("/machines")
+		{
+			machines.GET("/status/:machineName", GetMachineStatus)
+			start := machines.Group("/start")
+			{
+				start.POST("/:machineName", StartMachine)
+				start.POST("/:machineName/automated", StartMachineAutomated)
+			}
+			stop := machines.Group("/stop")
+			{
+				stop.POST("/:machineName", StopMachine)
+				stop.POST("/:machineName/automated", StopMachineAutomated)
+
+			}
+		}
+		tasks := v1.Group("/tasks")
+		{
+			tasks.GET("/:taskID", GetTaskStatus)
+		}
 	}
 	return r
 }
@@ -47,10 +62,58 @@ func StartMachine(ctx *gin.Context) {
 	})
 }
 
+func StartMachineAutomated(ctx *gin.Context) {
+	machineName := ctx.Param("machineName")
+	task := usecase.NewTasks(func() error {
+		err := machineUsecase.StartMachineAutomated(machineName)
+		if err != nil {
+			return fmt.Errorf("failed to start machine: %w", err)
+		}
+		return nil
+	})
+	t, err := json.Marshal(task.RegisteredAt)
+	if err != nil {
+		ctx.JSON(500, gin.H{
+			"message": fmt.Sprintf("failed to marshal time: %v", err),
+		})
+		return
+	}
+
+	ctx.JSON(200, gin.H{
+		"id":            task.ID,
+		"status":        task.Status,
+		"registered_at": string(t),
+	})
+}
+
 func StopMachine(ctx *gin.Context) {
 	machineName := ctx.Param("machineName")
 	task := usecase.NewTasks(func() error {
 		err := machineUsecase.StopMachine(machineName)
+		if err != nil {
+			return fmt.Errorf("failed to stop machine: %w", err)
+		}
+		return nil
+	})
+	t, err := json.Marshal(task.RegisteredAt)
+	if err != nil {
+		ctx.JSON(500, gin.H{
+			"message": fmt.Sprintf("failed to marshal time: %v", err),
+		})
+		return
+	}
+
+	ctx.JSON(200, gin.H{
+		"id":            task.ID,
+		"status":        task.Status,
+		"registered_at": string(t),
+	})
+}
+
+func StopMachineAutomated(ctx *gin.Context) {
+	machineName := ctx.Param("machineName")
+	task := usecase.NewTasks(func() error {
+		err := machineUsecase.StopMachineAutomated(machineName)
 		if err != nil {
 			return fmt.Errorf("failed to stop machine: %w", err)
 		}
