# openapi.yaml
@@ -37,6 +37,36 @@ paths:
                   message:
                     type: string
                     example: "Machine 'machine1' not found"
+  '/machines/start/{machineName}/automated':
+    parameters:
+      - schema:
+          type: string
+        name: machineName
+        in: path
+        required: true
+        description: Machine Name
+    post:
+      summary: Start Machine in Automated Action
+      operationId: start-machine-automated
+      responses:
+        '202':
+          description: Accepted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Machine 'machine1' not found"
   '/machines/stop/{machineName}':
     parameters:
       - schema:
@@ -57,6 +87,36 @@ paths:
                 $ref: '#/components/schemas/Task'
         '404':
           description: Not Found
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Machine 'machine1' not found"
+  '/machines/stop/{machineName}/automated':
+    parameters:
+      - schema:
+          type: string
+        name: machineName
+        in: path
+        required: true
+        description: Machine Name
+    post:
+      summary: Stop Machine in Automated Action
+      operationId: stop-machine-automated
+      responses:
+        '202':
+          description: Accepted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '400':
+          description: Bad Request
         '500':
           description: Internal Server Error
           content:
